add InventoryResponse dto